[package]
name = "canze-rs"
authors = ['Mariusz Białończyk']
version = "0.1.0"
edition = "2021"
license = 'GPL-2.0'
description = 'Renault Zoe influxdb parameters logger'
documentation = 'https://github.com/manio/canze-rs'
readme = 'README.md'
include = ['/README.md', '/LICENSE', '/Cargo.toml', '/Cargo.lock', '/src/*.rs', 'images/*']
keywords = ['canze', 'can', 'renault', 'zoe', 'ze']
categories = ['command-line-utilities']
homepage = 'https://github.com/manio/canze-rs'
repository = 'https://github.com/manio/canze-rs'

[dependencies]
log = "0.4.1"
simplelog = { version = "0.11.2", features = ["paris", "ansi_term"] }
ctrlc = { version = "3.1.0", features = ["termination"] }
rust-ini = "0.10.3"
clap = { version = "3.0.13", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
chrono = "0.4.34"
influxdb = "0.7.2"
bluer = { version = "0.17.1", features = ["rfcomm"] }
